--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Replace with your title</title>
+    <title>Places I've been in the last 20 days during quarantine</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
@@ -114,7 +114,7 @@
       function init() {
         Tabletop.init({
           // YOUR TURN: change 'key' value to point to your spreadsheet
-          key: 'https://docs.google.com/spreadsheets/d/1fqYxSwrD2s_4_IZ8a0R67rylzbw8wLYh5c3ybWXjKtQ/edit?usp=sharing',
+          key: '1fqYxSwrD2s_4_IZ8a0R67rylzbw8wLYh5c3ybWXjKtQ',
           // once Tabletop has loaded the data, it passes it to the 'callback' function, 'addPoints', defined below
           callback: addPoints,
           simpleSheet: true
