--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       function init() {
         Tabletop.init({
           // YOUR TURN: change 'key' value to point to your spreadsheet
-          key: '1fqYxSwrD2s_4_IZ8a0R67rylzbw8wLYh5c3ybWXjKtQ',
+          key: 'https://docs.google.com/spreadsheets/d/1fqYxSwrD2s_4_IZ8a0R67rylzbw8wLYh5c3ybWXjKtQ/edit?usp=sharing',
           // once Tabletop has loaded the data, it passes it to the 'callback' function, 'addPoints', defined below
           callback: addPoints,
           simpleSheet: true
