--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           // create a variable for your markup and add it to the map 
           var marker = new mapboxgl.Marker({
-              color: 'purple'
+              color: row.Color
             })
             .setLngLat([row.Longitude, row.Latitude])
             .setPopup(popup)
