--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       var map = new mapboxgl.Map({
         container: 'map', // container id
         style: "mapbox://styles/mapbox/streets-v11", //YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
-        center: [-122.411464, 37.7852299], // starting position [lng, lat]
-        zoom: 9, // starting zoom
+        center: [-34.6308729, -58.4081976], // starting position [lng, lat]
+        zoom: 14, // starting zoom
         transformRequest: transformRequest
       });
 
