--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       background: #404040;
       margin: 0;
       padding: 0;
+      font-size: 1.4em;
     }
 
 
@@ -501,8 +502,8 @@
       var map = new mapboxgl.Map({
         container: 'map', // container id
         style: "mapbox://styles/mapbox/streets-v11", //YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
-        center: [-58.4081976,-34.6308729], // starting position [lng, lat]
-        zoom: 13, // starting zoom
+        center: [-58.4072607,-34.6149442], // starting position [lng, lat]
+        zoom: 12, // starting zoom
         transformRequest: transformRequest
       });
 
