added pointer to the marker

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
     .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
       border-bottom-color: rgb(61, 59, 59);
     }
+    .mapboxgl-marker{
+      cursor: pointer;
+    }
 .theWordartOne{
   position: absolute;
   left: 10px;
